# agni

./: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: bpf-verification.yaml  end-to-end.yaml  llvm-to-smt.yml
bpf-encodings/4.14/: BPF_ADD.smt2  BPF_AND_32.smt2  BPF_JEQ.smt2  BPF_JLE.smt2  BPF_JLT.smt2  BPF_JSGE.smt2  BPF_JSLE.smt2  BPF_LSH.smt2  BPF_RSH.smt2  BPF_RSH_32.smt2  BPF_SUB.smt2  BPF_SYNC.smt2
bpf-encodings/5.10/: BPF_ADD.smt2  BPF_ADD_32.smt2  BPF_AND.smt2  BPF_AND_32.smt2  BPF_ARSH.smt2  BPF_ARSH_32.smt2  BPF_JEQ.smt2  BPF_JEQ_32.smt2  BPF_JGE.smt2  BPF_JGE_32.smt2  BPF_JGT.smt2  BPF_JGT_32.smt2  BPF_JLE.smt2  BPF_JLE_32.smt2  BPF_JLT.smt2  BPF_JLT_32.smt2  BPF_JNE.smt2  BPF_JNE_32.smt2  BPF_JSET.smt2  BPF_JSET_32.smt2  BPF_JSGE.smt2  BPF_JSGE_32.smt2  BPF_JSGT.smt2  BPF_JSGT_32.smt2  BPF_JSLE.smt2  BPF_JSLE_32.smt2  BPF_JSLT.smt2  BPF_JSLT_32.smt2  BPF_LSH.smt2  BPF_LSH_32.smt2  BPF_OR.smt2  BPF_OR_32.smt2  BPF_RSH.smt2  BPF_RSH_32.smt2  BPF_SUB.smt2  BPF_SUB_32.smt2  BPF_SYNC.smt2  BPF_XOR.smt2  BPF_XOR_32.smt2  tnum.ll  (+2 more)
bpf-encodings/5.10-no-modular/: BPF_ARSH.smt2  BPF_JEQ_32.smt2  BPF_JGE.smt2  BPF_JGE_32.smt2  BPF_JGT_32.smt2  BPF_JLE.smt2  BPF_JLE_32.smt2  BPF_JSGE.smt2  BPF_JSGT_32.smt2  BPF_JSLT.smt2  BPF_LSH_32.smt2  BPF_XOR_32.smt2  tnum.ll  verifier.ll  verifier_tnum.ll
bpf-encodings/5.10-rc1/: BPF_ADD_32.smt2  BPF_AND_32.smt2  BPF_JLT.smt2  BPF_RSH_32.smt2  BPF_SUB.smt2  BPF_SUB_32.smt2
bpf-encodings/5.11/: BPF_ADD.smt2  BPF_ADD_32.smt2  BPF_ARSH_32.smt2  BPF_JEQ.smt2  BPF_JLT.smt2  BPF_JSLT_32.smt2  BPF_LSH_32.smt2  BPF_RSH_32.smt2  BPF_SUB_32.smt2  BPF_SYNC.smt2  BPF_XOR.smt2  BPF_XOR_32.smt2
bpf-encodings/5.12/: BPF_ADD_32.smt2  BPF_AND_32.smt2  BPF_ARSH.smt2  BPF_JEQ.smt2  BPF_JGE.smt2  BPF_JSGT_32.smt2  BPF_JSLE.smt2  BPF_JSLE_32.smt2  BPF_OR.smt2  BPF_RSH.smt2  BPF_SUB.smt2  BPF_SUB_32.smt2  BPF_XOR.smt2  BPF_XOR_32.smt2
bpf-encodings/5.13/: BPF_ADD.smt2  BPF_ADD_32.smt2  BPF_ARSH.smt2  BPF_JGE_32.smt2  BPF_JSGE.smt2  BPF_JSLT_32.smt2  BPF_LSH.smt2  BPF_OR_32.smt2  BPF_RSH.smt2  BPF_SUB.smt2  BPF_SUB_32.smt2  BPF_SYNC.smt2  BPF_XOR.smt2  BPF_XOR_32.smt2
bpf-encodings/5.14/: BPF_AND_32.smt2  BPF_JLE.smt2  BPF_JLT.smt2  BPF_JNE_32.smt2  BPF_JSGE_32.smt2  BPF_JSGT_32.smt2  BPF_JSLT.smt2  BPF_OR_32.smt2  BPF_SUB.smt2  BPF_SUB_32.smt2  BPF_XOR_32.smt2
bpf-encodings/5.15/: BPF_ADD.smt2  BPF_ADD_32.smt2  BPF_AND.smt2  BPF_AND_32.smt2  BPF_ARSH.smt2  BPF_ARSH_32.smt2  BPF_JEQ.smt2  BPF_JEQ_32.smt2  BPF_JGE.smt2  BPF_JGE_32.smt2  BPF_JGT.smt2  BPF_JGT_32.smt2  BPF_JLE.smt2  BPF_JLE_32.smt2  BPF_JLT.smt2  BPF_JLT_32.smt2  BPF_JNE.smt2  BPF_JNE_32.smt2  BPF_JSET.smt2  BPF_JSET_32.smt2  BPF_JSGE.smt2  BPF_JSGE_32.smt2  BPF_JSGT.smt2  BPF_JSGT_32.smt2  BPF_JSLE.smt2  BPF_JSLE_32.smt2  BPF_JSLT.smt2  BPF_JSLT_32.smt2  BPF_LSH.smt2  BPF_LSH_32.smt2  BPF_OR.smt2  BPF_OR_32.smt2  BPF_RSH.smt2  BPF_RSH_32.smt2  BPF_SUB.smt2  BPF_SUB_32.smt2  BPF_SYNC.smt2  BPF_XOR.smt2  BPF_XOR_32.smt2  tnum.ll  (+2 more)
bpf-encodings/5.15-no-modular/: BPF_AND_32.smt2  BPF_JGT.smt2  BPF_JLE.smt2  BPF_JLT.smt2  BPF_JNE_32.smt2  BPF_JSGE_32.smt2  BPF_LSH.smt2  BPF_OR.smt2  BPF_OR_32.smt2  BPF_RSH.smt2  BPF_XOR.smt2  tnum.ll  verifier_tnum.ll
bpf-encodings/5.16/: BPF_JEQ.smt2  BPF_JNE.smt2  BPF_JNE_32.smt2  BPF_JSGT_32.smt2  (+1 more)
bpf-verification/: bpf_prog_from_poc.py  setup.py
bpf_verification/: synthesize_bug_types.py
llvm-to-smt/: generate_encodings.py  run_llvm_passes.py  wrappers.py
llvm-to-smt/llvm-passes/InlineFunctionCalls/: CMakeLists.txt  InlineFunctionCalls.cpp  InlineFunctionCalls.hpp
llvm-to-smt/llvm-passes/LLVMToSMT/: BVTree.cpp  BVTree.hpp  BVTreeTests.cpp  BitvecHelper.cpp  BitvecHelper.hpp  CMakeLists.txt  FunctionEncoder.cpp  FunctionEncoder.hpp  LLVMToSMT.cpp  LLVMToSMT.h  LLVMToSMT.hpp  ModuleEncoder.cpp  ModuleEncoder.hpp
patches/: bpf-refine-u32-s32-bounds-when-ranges-cross-min-max-boundary.patch
reproduce-results/: reproduce_results.py
(+1730 files in other folders)
